Small Bug Fixes and Slight Changes
- Select and Button now have the same styling.
- There is no longer an empty space below decimal position on Normal Mode (until after the 3 millionth digit)
- Very minor Alert message change.
- Updated Hardcore Menu text.
- Slight CSS Changes

--- a/The Digits of Pi/hardcoremenu.html
+++ b/The Digits of Pi/hardcoremenu.html
@@ -16,9 +16,10 @@
     </div>
     <div class="hardcore">
       <h1 style = "color: rgb(117, 0, 0)">Hardcore Mode</h1>
-      <p>In Hardcore Mode, you are forced to be in fullscreen.</p>
+      <p>In Hardcore Mode, you must be in fullscreen with 100% browser zoom.</p>
       <p>If you leave fullscreen mode, your run will end.</p>
       <p>If you leave this page and go to another, your run will end.</p>
+      <p>If you change your browser zoom, your run will end.</p>
       <p><b>Would you like to play?</b></p>
       <a style = "color: rgb(2, 101, 30)" href="hardcore.html">Yes!</a>
       <a style = "color: rgb(117, 0, 0)" href="pi.html">No...</a>
