--- a/The Digits of Pi/pi.html
+++ b/The Digits of Pi/pi.html
@@ -15,7 +15,7 @@
       <a href="hardcoremenu.html">Hardcore Mode</a>
     </nav>  
     </div>
-    <div class="main">
+    <div class="mainshorter">
       <h1>The Digits of Pi</h1>
       <div class="message">
       <div id="message"></div>
